Додав зміни в тексті

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,9 @@
 <div class="container">
-  <h1>Initernet shop</h1>
+  <h1>Home Stuff</h1>
   <nav>
-    <a routerLink="/">Home</a>
-    <a routerLink="products">Products</a>
-    <a routerLink="basket">Basket</a>
+    <a routerLink="/">Домашня</a>
+    <a routerLink="products">Товари</a>
+    <a routerLink="basket">Корзина</a>
   </nav>
   <hr>
   <router-outlet></router-outlet>
