--- a/src/app/products/card/card.component.html
+++ b/src/app/products/card/card.component.html
@@ -2,5 +2,5 @@
     <h1>{{ product.title }}</h1>
     <p>{{ product.description }}</p>
     <p>{{ product.price }}</p>
-    <button (click)="buy()">Купить</button>
+    <button (click)="buy()">Купити</button>
 </div>
