--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <div class="container">
   <h1>Home Stuff</h1>
+  <h2>- choose your product -</h2>
   <nav>
     <a routerLink="/">Домашня</a>
     <a routerLink="products">Товари</a>
