--- a/src/app/products/products.component.css
+++ b/src/app/products/products.component.css
@@ -1,3 +1,47 @@
-.product{
-    border: 4px solid lightgreen;
+.product {
+  border: 2px solid rgb(144, 238, 236);
+}
+
+div {
+  text-align: center;
+}
+
+.item {
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  margin-bottom: 20px;
+  display: grid;
+  grid-template-columns: 230px;
+  grid-template-rows: 150px 100px 20px;
+  width: 150px;
+  max-height: 350px;
+  padding: 10px;
+}
+
+.center {
+  width: 1030px;
+  margin: 0 auto;
+  background-color: white;
+  border-radius: 20px;
+  display: grid;
+  grid-template-columns: 250px 250px 250px 250px;
+  grid-template-rows: 350px 350px 350px 350px;
+  gap: 10px 10px;
+  padding: 20px;
+}
+
+img {
+  width: 120px;
+  height: 120px;
+  border-radius: 20px;
+  transition: all 0.3s ease-in;
+  cursor: pointer;
+  padding-top: 20px;
+  margin: 0 auto;
+  object-fit:contain;
+  vertical-align: baseline;
+}
+
+.prod-price {
+  margin-top: 50px;
 }
