Додав оформлення для товару

--- a/src/app/products/card/card.component.html
+++ b/src/app/products/card/card.component.html
@@ -1,6 +1,11 @@
-<div *ngIf="product">
+<div *ngIf="product" class="center">
+  <div>
+  <img width="200" [src]="product.image" alt="image">
     <h1>{{ product.title }}</h1>
     <p>{{ product.description }}</p>
-    <p>{{ product.price }}</p>
-    <button (click)="buy()">Купити</button>
+    <p class="price">{{ product.price }}$</p>
+    <button (click)="buy()">В кошик</button>
+    </div>
 </div>
+
+
