--- a/src/app/basket/basket.component.html
+++ b/src/app/basket/basket.component.html
@@ -1,16 +1,17 @@
 <h2>Сторінка ваших замовлень</h2>
 
-<div class="basket">
+<div class="basket center">
     <div class="items left-side">
         <div
             class="product-item"
             *ngFor="let product of products"
         >
-            {{ product.category }}
+        <img width="200" [src]="product.image" alt="image">
+           <span class="category">{{ product.category }}</span>
             <br>
             {{ product.title }}
             <br>
-            {{ product.price | currency }}
+           <span class="price">{{ product.price | currency }}</span>
             <br>
             <button (click)="deleteOrder(product)">Видалити</button>
         </div>
