--- a/src/app/basket/basket.component.html
+++ b/src/app/basket/basket.component.html
@@ -19,6 +19,6 @@
     <div class="total-price right-side">
         <span>{{ priceTotal }} $</span>
         <hr>
-        <button>Підтвердити замовлення</button>
+        <button class="accept-btn">Підтвердити замовлення</button>
     </div>
 </div>
