--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,1 @@
-<p>home works!</p>
+<p class="text-white">Меленький магазинчк де можна <br> купити все, що потрібно вам або вашому дому. <br> Чоловічі, жіночі речі або навіть монітор!</p>
