Додав декоративні елеменрти

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,8 +4,11 @@
   <nav>
     <a routerLink="/">Домашня</a>
     <a routerLink="products">Товари</a>
-    <a routerLink="basket">Корзина</a>
+    <a routerLink="basket">Кошик</a>
   </nav>
   <hr>
   <router-outlet></router-outlet>
+  <div class="footer">
+    <a class="text-white" href="https://github.com/dmitryberesten" target="_blank">- Dmytrii Beresten GitHub -</a>
+  </div>
 </div>
