--- a/src/app/products/card/card.component.html
+++ b/src/app/products/card/card.component.html
@@ -6,6 +6,7 @@
     <div class="flex-container">
       <p class="price">{{ product.price }}$</p>
       <button (click)="buy()">В кошик</button>
+      <!-- <a routerLink="basket">Корзина</a> -->
     </div>
   </div>
 </div>
