--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -37,22 +37,23 @@ h2 {
   letter-spacing: 2px;
   color: aliceblue;
   font-style: italic;
+  line-height: 10px;
 }
 
 nav {
   display: flex;
   justify-content: center;
-  margin-bottom: 40px;
+  margin-bottom: 10px;
 }
 
 nav a {
   border: 2px solid whitesmoke;
-  padding: 10px;
+  padding: 10px 15px;
   text-decoration: none;
   font-size: 30px;
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
-  letter-spacing: 5px;
+  letter-spacing: 3px;
   transition: all 0.3s ease-in;
   border-radius: 20px;
   margin: 20px;
@@ -63,6 +64,27 @@ nav a:hover {
   transform: scale(1.1);
 
 }
+
+.footer {
+  background-color: rgba(0, 0, 0, 0.2);
+   text-align: center;
+}
+
+.text-white {
+  color: whitesmoke;
+  letter-spacing: 2px;
+  font-weight: 600;
+  text-decoration: none;
+  transition: all 0.3s ease-in;
+}
+
+.text-white:hover {
+  color: rgb(12, 56, 73);
+  transform: scale(1.2);
+  letter-spacing: 5px;
+  text-transform: uppercase;
+}
+
 
 
 
