--- a/src/app/basket/basket.component.css
+++ b/src/app/basket/basket.component.css
@@ -2,6 +2,11 @@ h2 {
   text-align: center;
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+    letter-spacing: 3px;
+}
+hr {
+  margin-left: 8px;
+  background-color: aquamarine;
 }
 
 .basket {
@@ -24,6 +29,13 @@ h2 {
   display: flex;
   justify-content: space-between;
   border-radius: 20px;
+  cursor: pointer;
+  transition: all 0.3s ease-in;
+  background-color: white;
+}
+
+.product-item:hover {
+  transform: scale(1.01);
 }
 
 img {
@@ -65,7 +77,7 @@ span {
   width: 1000px;
   background-color: white;
   border-radius: 20px;
-  margin: 0 auto;
+  margin: 0 auto 30px;
 }
 
 button {
@@ -80,6 +92,11 @@ button {
   cursor: pointer;
   margin-top: 15px;
   height: 35px;
+  color: white;
+}
+
+button:hover {
+  background-color: rgb(27, 120, 212);
   color: white;
 }
 
