--- a/src/app/products/products.component.css
+++ b/src/app/products/products.component.css
@@ -1,5 +1,12 @@
 .product {
   border: 2px solid rgb(144, 238, 236);
+  background-color: white;
+  border-radius: 15px;
+  transition: all 0.3s ease-in;
+}
+
+.product:hover {
+  transform: scale(1.04);
 }
 
 div {
@@ -17,11 +24,13 @@ div {
   max-height: 350px;
   padding: 10px;
   cursor: pointer;
+  /* transition: all 0.3s ease-in; */
 }
+
 
 .center {
   width: 1030px;
-  margin: 0 auto;
+  margin: 0 auto 50px;
   background-color: white;
   border-radius: 20px;
   display: grid;
@@ -29,6 +38,7 @@ div {
   grid-template-rows: 350px 350px 350px 350px;
   gap: 10px 10px;
   padding: 20px;
+  padding-bottom: 50px;
 }
 
 img {
@@ -59,6 +69,10 @@ button {
     box-shadow: 0 0 3px 1px;
     cursor: pointer;
     color: white;
+}
+
+button:hover {
+  background-color: rgb(27, 120, 212);
 }
 
 .flex-container {
